<resources>
    <string name="app_name">Task App</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="menu_detailed"><u>Menu</u></string>
    <!--transition animation-->
    <string name="transition_store_detailed">image_store_detailed</string>
    <string name="image_store_detailed">image_store_detailed</string>
    <string name="kd_symbl">%1$s KD</string>
    <string name="title_activity_map_display">Map</string>
    <string name="btn_store">Load Store</string>
    <string name="btn_map">Load Tracking</string>
    <string name="btn_track">Set Location</string>
    <string name="permission_rationale">Enable Location Permission from Settings</string>
    <string name="ok">OK</string>
</resources>
