<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/semi_margin"
    tools:context=".ui.startup.StartUpActivity">

    <Button
        android:id="@+id/btn_startup_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_store" />

    <Button
        android:id="@+id/btn_startup_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_map" />

    <Button
        android:id="@+id/btn_startup_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_track" />
</LinearLayout>